force-app/main/default/objects/Loan_Application__c/fields/Conveyancer__c.field-meta.xml
<CustomField>
    <fullName>Conveyancer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conveyancer</label>
    <referenceTo>Conveyancer__c</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>