force-app/main/default/objects/Loan_Application__c/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <formula>IF(ISBLANK(Property_Purchase_Price__c) || Property_Purchase_Price__c = 0,
      0,
Loan_Amount__c / Property_Purchase_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>