force-app/main/default/objects/Loan_Application__c/fields/Property_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Property_Purchase_Price__c</fullName>
    <label>Property Purchase Price</label>
    <summarizedField>Property__c.Purchase_Price__c</summarizedField>
    <summaryForeignKey>Property__c.Loan_Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>