force-app/main/default/objects/Loan_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Offer Application</fullName>
                <default>true</default>
                <label>Pre-Offer Application</label>
            </value>
            <value>
                <fullName>Full Offer</fullName>
            </value>
            <value>
                <fullName>Funds Requested</fullName>
            </value>
            <value>
                <fullName>Funds Released</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>No Longer Proceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>